# DualPM_Paper

./: .gitignore  DOWNLOAD.md  LICENSE  README.md  pyproject.toml
configs/: infer.yaml  main.yaml  test.yaml
scripts/: estimate_skeleton.py  infer.py  raster_pointmaps.py  train.py
src/dualpm_paper/: __init__.py  alt_dataset.py  backbones.py  bones.py  dataset.py  models.py  pointmaps.py  skin.py  utils.py
