[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dualpm_paper"
description = "Supporting code for cs.CV arXiv:2412.04464"
authors = [{ name = "Ben Kaye", email = "kaye@robots.com" }]
dependencies = [
    "einops==0.*,>=0.8",
    "torch==2.*",
    "numpy==2.*",
    "trimesh==4.*",
    "hydra-core==1.*,>=1.3",
    "nvdiffrast@git+https://github.com/NVlabs/nvdiffrast.git@v0.3.3",
    "pygltflib==1.*",
    "dualpm@git+https://github.com/ben-kaye/dualpm_lib.git",
]
optional-dependencies = { "extra" = [
    "animodel_points@git+https://github.com/DualPM/AnimodelPoints.git",
] }

requires-python = ">=3.10"
version = "0.2.1"


[tool.ruff]
target-version = "py310"
